...
            <rect key="frame" x="0.0" y="0.0" width="393" height="72"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="center" tableViewCell="cell" id="content">
                <rect key="frame" x="0.0" y="0.0" width="393" height="72"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <label opaque="NO" contentMode="left" text="Başlık" numberOfLines="0" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="key"><fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/></label>
                    <label opaque="NO" contentMode="left" text="Değer" numberOfLines="0" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="value"><fontDescription key="fontDescription" style="UICTFontTextStyleBody"/></label>
                </subviews>
                <constraints>
                    <constraint firstItem="key" firstAttribute="top" secondItem="content" secondAttribute="top" constant="16" id="key-top"/>
                    <constraint firstItem="key" firstAttribute="leading" secondItem="content" secondAttribute="leading" constant="18" id="key-leading"/>
                    <constraint firstAttribute="trailing" secondItem="key" secondAttribute="trailing" constant="18" id="key-trailing"/>
...
